align issue fixed

--- a/aviyel/src/components/cards.css
+++ b/aviyel/src/components/cards.css
@@ -42,6 +42,7 @@
 
 .card-content {
   width: 80%;
+  padding-left: 5%;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 500;
@@ -58,10 +59,10 @@ font-size: 13px;
    -webkit-box-orient: vertical;
    color:#A49696
 }
-/* .card-content h3 {
-margin:12px;
-margin-bottom: 6px;
-} */
+.card-content h3 {
+
+margin-bottom:-5px;
+}
 
 /* .card-content h4{
   margin:12px;
@@ -163,6 +164,10 @@ a{
 @media screen and (max-width: 800px) {
   .parent {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .card-content{
+    padding-left: 0%;
   }
 
   .parent {
